--- a/UserGallery/Views/Home/UserDetails.cshtml
+++ b/UserGallery/Views/Home/UserDetails.cshtml
@@ -23,10 +23,11 @@
     </tr>
     <tr>
         <th>Address</th>
-        <td>@Model.address.Street + "," + @Model.address.Suite + "," + @Model.address.City + "," + @Model.address.Zipcode</td>
+        <td> @(Model.address.Street + "," + Model.address.Suite + "," + Model.address.City + "," + Model.address.Zipcode)</td>
     </tr>
     <tr>
         <th>Posts</th>
+        <td>@Model.Body</td>
         
     </tr>
   
