--- a/UserGallery/Views/Shared/_Layout.cshtml
+++ b/UserGallery/Views/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            
+        <div class="container" style="color:white!important;font-size:larger">
+           Welcome to your portfolio!!
         </div>
     </div>
     <div class="container body-content">
